backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: backend
    spec:
      containers:
      - env:
        - name: CONFIG_LOCATION
          value: file:/config/application.properties
        image: ns3147787.ip-51-91-7.eu:6555/corsegsm-cjv-backend:2.0.1
        imagePullPolicy: ""
        name: backend
        resources: {}
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
