db-wp2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db-wp2
  name: db-wp2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-wp2
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: db-wp2
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: corsegsm-cjv-wp2
        - name: POSTGRES_HOST_AUTH_METHOD
          value: trust
        - name: POSTGRES_PASSWORD
          value: mysecretpassword
        image: postgres:13.1
        imagePullPolicy: ""
        name: db-wp2
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data-wp2
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: postgres-data-wp2
        persistentVolumeClaim:
          claimName: postgres-data-wp2
status: {}
