frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
      - image: ns3147787.ip-51-91-7.eu:6555/corsegsm-cjv-frontend:2.0.1
        imagePullPolicy: ""
        name: frontend
        resources: {}
        volumeMounts:
          - name : frontend-config
            mountPath: /etc/nginx/conf.d
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: frontend-config
          configMap:
            name: frontend-config-file
status: {}
