nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - env:
        - name: AUTO_LETS_ENCRYPT
          value: "no"
        - name: USE_FAIL2BAN
          value: "no"
        - name: DISABLE_DEFAULT_SERVER
          value: "yes"
        - name: REDIRECT_HTTP_TO_HTTPS
          value: "no"
        - name: REVERSE_PROXY_HOST_1
          value: http://frontend/
        - name: REVERSE_PROXY_HOST_2
          value: http://back-office/
        - name: REVERSE_PROXY_URL_1
          value: /cjv/
        - name: REVERSE_PROXY_URL_2
          value: /back-office/
        - name: SERVER_NAME
          value: corsegsm.4dd783d3c4724849ae30.westeurope.aksapp.io
        - name: SERVE_FILES
          value: "no"
        - name: USE_BROTLI
          value: "yes"
        - name: USE_GZIP
          value: "yes"
        - name: USE_PROXY_CACHE
          value: "yes"
        - name: USE_REVERSE_PROXY
          value: "yes"
        image: bunkerity/bunkerized-nginx
        imagePullPolicy: ""
        name: nginx
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      subdomain: corsegsmcontainer
      volumes: null
status: {}
