back-office-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-office
spec:
  selector:
    io.kompose.service: back-office
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
