backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    io.kompose.service: backend
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
