db-wp2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-wp2
spec:
  selector:
    io.kompose.service: db-wp2
  ports:
  - protocol: "TCP"
    port: 5432
    targetPort: 5432
