ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: corsegsm.4dd783d3c4724849ae30.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
